change content and fixing z-index

--- a/components/plasmic/cfund_landing_page/PlasmicLogin.module.css
+++ b/components/plasmic/cfund_landing_page/PlasmicLogin.module.css
@@ -14,7 +14,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1;
+  z-index: 99;
   right: 0;
 }
 .freeBox {
